objects/Customer_Survey__c.object
<CustomObject>
    <description>Custom object to hold DDW (Data Development Worldwide) Customer surveys.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <description>Date the survey was submitted</description>
        <label>Survey Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>